tests/error/0_size_variable.gw
// [contains] cannot
void this_won_t_work;
